<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF2FF"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="58dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="112dp"
        android:background="@null"
        android:contentDescription="@string/logoapple"
        android:src="@drawable/group_33737"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/Pass_text"
        tools:src="@drawable/group_33737" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="58dp"
        android:layout_height="55dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="48dp"
        android:background="@null"
        android:contentDescription="@string/logogoogle"
        android:src="@drawable/group_33736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pass_text"
        tools:src="@drawable/group_33736" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="166dp"
        android:background="@null"
        android:contentDescription="@string/logologo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_33758" />

    <Button
        android:id="@+id/Registre_Butt"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:onClick="register"
        android:text="@string/registro"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Inicio_Butt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/Inicio_Butt"
        android:onClick="login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="76dp"
        android:text="@string/inicio_sesi_n"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/Email_text"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="63dp"
        android:autofillHints=""
        android:background="@drawable/rectangle_981"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="11dp"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registre_Butt" />

    <EditText
        android:id="@+id/Pass_text"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="63dp"
        android:autofillHints=""
        android:background="@drawable/rectangle_981"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="11dp"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="260dp"
        android:layout_height="26dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:text="@string/ingresa_como_invitado"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="52dp"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/frame_1233" />

</androidx.constraintlayout.widget.ConstraintLayout>